bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:3: error: not found: value n
    if (n<7){
        ^ParotTrouble:6: error: not found: value n
    if (n>23){
        ^