bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if(talking){ 
    if (n<7){
      return true
    }
    if (n>23){
      return true
    }
   }
  return false
  }
 
